--- a/YumFun/YumFun/Views/Cooking.storyboard
+++ b/YumFun/YumFun/Views/Cooking.storyboard
@@ -62,17 +62,17 @@
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kTl-G3-BGO">
-                                <rect key="frame" x="10" y="148" width="394" height="549"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="148" width="414" height="549"/>
+                                <color key="backgroundColor" name="collection_bg_color"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="amX-Ke-cLW">
                                     <size key="itemSize" width="394" height="172"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StepCell" id="JQT-lC-GNt" customClass="StepCell" customModule="YumFun" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="172"/>
+                                        <rect key="frame" x="10" y="10" width="394" height="172"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="z7A-3e-Mx7">
                                             <rect key="frame" x="0.0" y="0.0" width="394" height="172"/>
@@ -171,7 +171,7 @@
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ggd-SL-NJW">
                                 <rect key="frame" x="10" y="90" width="394" height="50"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" name="collection_bg_color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="gXs-kS-cVY"/>
                                 </constraints>
@@ -227,16 +227,16 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gdj-Sp-fqj"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="collection_bg_color"/>
                         <constraints>
                             <constraint firstItem="wCq-dj-Pc1" firstAttribute="top" secondItem="gdj-Sp-fqj" secondAttribute="top" constant="10" id="0PE-Qv-naW"/>
+                            <constraint firstItem="kTl-G3-BGO" firstAttribute="leading" secondItem="gdj-Sp-fqj" secondAttribute="leading" id="2i1-y5-OPB"/>
                             <constraint firstItem="pSD-Ms-gBd" firstAttribute="top" secondItem="OLh-Ak-S9h" secondAttribute="bottom" constant="20" id="BEa-7J-Tie"/>
-                            <constraint firstItem="kTl-G3-BGO" firstAttribute="leading" secondItem="Ggd-SL-NJW" secondAttribute="leading" id="FOr-pe-wvj"/>
                             <constraint firstItem="gdj-Sp-fqj" firstAttribute="trailing" secondItem="OLh-Ak-S9h" secondAttribute="trailing" constant="40" id="IQh-AO-q82"/>
-                            <constraint firstItem="kTl-G3-BGO" firstAttribute="trailing" secondItem="Ggd-SL-NJW" secondAttribute="trailing" id="KJ5-pj-qKd"/>
                             <constraint firstItem="gdj-Sp-fqj" firstAttribute="trailing" secondItem="wCq-dj-Pc1" secondAttribute="trailing" constant="20" id="MYN-M3-eoV"/>
                             <constraint firstItem="OLh-Ak-S9h" firstAttribute="top" secondItem="kTl-G3-BGO" secondAttribute="bottom" constant="20" id="PFx-tb-l6H"/>
                             <constraint firstItem="Ggd-SL-NJW" firstAttribute="leading" secondItem="gdj-Sp-fqj" secondAttribute="leading" constant="10" id="Q5P-rh-HUk"/>
+                            <constraint firstItem="gdj-Sp-fqj" firstAttribute="trailing" secondItem="kTl-G3-BGO" secondAttribute="trailing" id="RwU-rW-tqt"/>
                             <constraint firstItem="pSD-Ms-gBd" firstAttribute="leading" secondItem="OLh-Ak-S9h" secondAttribute="leading" id="VbM-uT-Tmb"/>
                             <constraint firstItem="pSD-Ms-gBd" firstAttribute="centerX" secondItem="ZfL-bN-IS6" secondAttribute="centerX" id="WQ0-Jn-Oka"/>
                             <constraint firstItem="OLh-Ak-S9h" firstAttribute="centerX" secondItem="ZfL-bN-IS6" secondAttribute="centerX" id="cdO-NE-NlE"/>
@@ -282,17 +282,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7eB-yk-vvr">
-                                <rect key="frame" x="10" y="153" width="394" height="709"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="153" width="414" height="709"/>
+                                <color key="backgroundColor" name="collection_bg_color"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wMc-Wh-4gN">
                                     <size key="itemSize" width="394" height="115"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CookingStepCell" id="g3e-X5-P9z" customClass="CookingStepCell" customModule="YumFun" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="115"/>
+                                        <rect key="frame" x="10" y="10" width="394" height="115"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="qOF-nB-Yxi">
                                             <rect key="frame" x="0.0" y="0.0" width="394" height="115"/>
@@ -401,7 +401,7 @@
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VWo-O5-COP">
                                 <rect key="frame" x="10" y="95" width="394" height="50"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" name="collection_bg_color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="f3h-eq-NJz"/>
                                 </constraints>
@@ -452,16 +452,16 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3x6-St-Xxb"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="collection_bg_color"/>
                         <constraints>
                             <constraint firstItem="7eB-yk-vvr" firstAttribute="top" secondItem="VWo-O5-COP" secondAttribute="bottom" constant="8" symbolic="YES" id="7c3-tU-ntE"/>
                             <constraint firstItem="9kd-cb-ogW" firstAttribute="top" secondItem="3x6-St-Xxb" secondAttribute="top" constant="15" id="F09-d0-u2B"/>
                             <constraint firstItem="VWo-O5-COP" firstAttribute="leading" secondItem="3x6-St-Xxb" secondAttribute="leading" constant="10" id="SQi-sE-snm"/>
-                            <constraint firstItem="3x6-St-Xxb" firstAttribute="trailing" secondItem="7eB-yk-vvr" secondAttribute="trailing" constant="10" id="Tta-V5-yac"/>
+                            <constraint firstItem="3x6-St-Xxb" firstAttribute="trailing" secondItem="7eB-yk-vvr" secondAttribute="trailing" id="Tta-V5-yac"/>
                             <constraint firstItem="3x6-St-Xxb" firstAttribute="trailing" secondItem="9kd-cb-ogW" secondAttribute="trailing" constant="20" id="VJq-am-jLr"/>
                             <constraint firstItem="VWo-O5-COP" firstAttribute="top" secondItem="9kd-cb-ogW" secondAttribute="bottom" constant="8" symbolic="YES" id="nUN-pW-dUi"/>
                             <constraint firstItem="7eB-yk-vvr" firstAttribute="bottom" secondItem="3x6-St-Xxb" secondAttribute="bottom" id="nzH-1b-WwM"/>
-                            <constraint firstItem="7eB-yk-vvr" firstAttribute="leading" secondItem="3x6-St-Xxb" secondAttribute="leading" constant="10" id="rmf-nK-vEN"/>
+                            <constraint firstItem="7eB-yk-vvr" firstAttribute="leading" secondItem="3x6-St-Xxb" secondAttribute="leading" id="rmf-nK-vEN"/>
                             <constraint firstItem="3x6-St-Xxb" firstAttribute="trailing" secondItem="VWo-O5-COP" secondAttribute="trailing" constant="10" id="yEI-yt-MSh"/>
                         </constraints>
                     </view>
@@ -572,6 +572,9 @@
         <image name="local_dining-24px" width="24" height="24"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="power" catalog="system" width="128" height="124"/>
+        <namedColor name="collection_bg_color">
+            <color red="0.94900000095367432" green="0.94900000095367432" blue="0.96899998188018799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primary">
             <color red="0.090000003576278687" green="0.60000002384185791" blue="0.50999999046325684" alpha="0.80099999904632568" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
